--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,14 @@
 OPENAI_API_KEY=your-api-key-here
 OPENAI_API_BASE=https://api.openai.com/v1  # 可选，默认为官方API地址
 
+# AI 提供商配置 (openai 或 gemini)
+# AI_PROVIDER=openai  # 默认使用 openai
+# AI_PROVIDER=gemini   # 如果要使用 Gemini，取消注释此行并注释掉上一行
+
+# Gemini API 配置 (如果 AI_PROVIDER 设置为 "gemini")
+# GEMINI_API_KEY=your-gemini-api-key-here
+# GEMINI_MODEL=gemini-pro # 可选，默认为 gemini-pro
+
 # 服务设置
 HOST=0.0.0.0
 PORT=5000
