feat: 更新配置和文档以支持 Gemini API，增强错误处理和版本管理

--- a/.env.example
+++ b/.env.example
@@ -3,8 +3,8 @@ OPENAI_API_KEY=your-api-key-here
 OPENAI_API_BASE=https://api.openai.com/v1  # 可选，默认为官方API地址
 
 # AI 提供商配置 (openai 或 gemini)
-# AI_PROVIDER=openai  # 默认使用 openai
-# AI_PROVIDER=gemini   # 如果要使用 Gemini，取消注释此行并注释掉上一行
+# AI_PROVIDER=gemini  # 默认使用 gemini (在 config.py 中设置)
+# AI_PROVIDER=openai   # 如果要使用 OpenAI，取消注释此行并设置上面的 AI_PROVIDER
 
 # Gemini API 配置 (如果 AI_PROVIDER 设置为 "gemini")
 # GEMINI_API_KEY=your-gemini-api-key-here
