feat: Add network diagnosis script for Gemini API connectivity issues
- Implemented `network_diagnosis.py` to test network connectivity, DNS resolution, and API port accessibility.
- Added firewall and proxy settings checks.
- Provided troubleshooting solutions for common connectivity issues.

chore: Configure project settings with `pyproject.toml`

- Set up Black for code formatting, Isort for import sorting, and Mypy for type checking.
- Defined strict type checking rules and ignored missing imports for specific modules.

feat: Introduce rate limiting functionality in `rate_limiter.py`

- Created a memory-based rate limiter to control request frequency.
- Implemented methods to check request allowance and retrieve remaining requests.

build: Create PowerShell setup script for execution policy

- Added `setup_powershell.bat` to assist users in setting PowerShell execution policies for script execution.

feat: Develop application startup script in `start.py`

- Implemented a script to set Python paths, check dependencies, and launch the application.

test: Add API testing script `test_api_manual.py`

- Created a script to manually test API endpoints with predefined questions and validate responses.

test: Implement external database priority logic tests

- Developed `test_external_db_priority.py` to verify the priority logic of external question databases.

chore: Add sample questions in `test_questions.json`

- Included a JSON file with sample questions for testing purposes.

test: Initialize test package with `__init__.py`

- Created an empty `__init__.py` file to define the tests package.

test: Write comprehensive tests for application functionality

- Developed `test_app.py` to cover various aspects of the application, including API endpoints and utility functions.
- Added tests for error handling, input validation, and caching mechanisms.

test: Create extensive tests for reading comprehension and external database features

- Implemented `test_comprehensive.p

--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,14 @@
+# AI 提供商配置 (openai 或 gemini)
+AI_PROVIDER=gemini  # 默认使用 gemini
+# AI_PROVIDER=openai   # 如果要使用 OpenAI，取消注释此行
+
 # OpenAI API配置
 OPENAI_API_KEY=your-api-key-here
 OPENAI_API_BASE=https://api.openai.com/v1  # 可选，默认为官方API地址
 
-# AI 提供商配置 (openai 或 gemini)
-# AI_PROVIDER=gemini  # 默认使用 gemini (在 config.py 中设置)
-# AI_PROVIDER=openai   # 如果要使用 OpenAI，取消注释此行并设置上面的 AI_PROVIDER
-
 # Gemini API 配置 (如果 AI_PROVIDER 设置为 "gemini")
-# GEMINI_API_KEY=your-gemini-api-key-here
-# GEMINI_MODEL=gemini-pro # 可选，默认为 gemini-pro
-
+GEMINI_API_KEY=your-gemini-api-key-here
+GEMINI_MODEL=gemini-1.5-flash  # 更新为稳定版本
 
 # 服务设置
 HOST=0.0.0.0
@@ -21,4 +20,31 @@ OPENAI_MODEL=gpt-3.5-turbo
 # 可选模型: gpt-3.5-turbo, gpt-4, gpt-4-turbo (根据API访问情况调整)
 
 # 安全设置 (可选)
-# ACCESS_TOKEN=your_access_token_here
+ACCESS_TOKEN=your_access_token_here
+
+# 数据库配置
+DATABASE_URL=sqlite:///db/dev.db
+
+# 缓存配置
+ENABLE_CACHE=True
+CACHE_EXPIRATION=86400
+REDIS_URL=redis://localhost:6379/0
+
+# 安全功能配置（可选，默认禁用）
+ENABLE_RATE_LIMIT=False
+ENABLE_INPUT_VALIDATION=False
+
+# 外部题库配置（可选，默认启用）
+ENABLE_EXTERNAL_DATABASE=True
+EXTERNAL_DATABASE_TIMEOUT=10
+
+# 速率限制配置（当ENABLE_RATE_LIMIT=True时生效）
+RATE_LIMIT_MAX_REQUESTS=100
+RATE_LIMIT_TIME_WINDOW=3600
+
+# 日志配置
+LOG_LEVEL=INFO
+
+# API配置
+MAX_TOKENS=100000
+TEMPERATURE=0.7
